# explainability-audit-core

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  FORMULAS.md  INTEGRATION_GUIDE.md  RELEASE_NOTES_0.1.0.md
explainability_audit_core/: __init__.py  explainer.py  model.py  reason_templates.py  version.py
tests/: test_domain_agnostic.py  test_explain.py  test_inv_expl_cov_1.py  test_inv_expl_det_1.py  test_inv_expl_min_1.py  test_inv_expl_rc_1.py  test_inv_expl_sec_1.py
